# cpp-project-2021h1

./: CMakeLists.txt  проект вер 2.1.drawio  проект вер 2.2.drawio  проект вер 2.drawio
Geometry/: Circle.cpp  Circle.h  Curve.cpp  Curve.hpp  Figure2D.cpp  Figure2D.h  Figure3D.cpp  Figure3D.h  GEOMETRICOBJECT.H  GeometricObject.cpp  GeometricObject.h  Geometry.cpp  Geometry.vcxproj  Geometry.vcxproj.filters  Line.cpp  Line.hpp  Menu.cpp  Menu.h  Point.cpp  Point.h  Straight.cpp  Straight.hpp  database.txt
Geometry/Debug/: Geometry.exe.recipe  Geometry.ilk  Geometry.vcxproj.FileListAbsolute.txt  geometry.obj.enc  vc142.idb
Geometry/Debug/Geometry.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Geometry.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Geometry/Geometry/: GeometricObject.cpp  GeometricObject.h  Geometry.cpp  Geometry.sln  Geometry.vcxproj  Geometry.vcxproj.filters  Point.cpp  Point.h
Geometry/Geometry/Debug/: Geometry.ilk  vc142.idb
Geometry/Geometry/Debug/Geometry.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Geometry.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
